objects/Preference_Card__c.object
<CustomObject><fields>
        <fullName>Arms__c</fullName>
        <label>Arms</label>
        <picklist>
            <picklistValues>
                <fullName>Arms Option #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arms Option #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arms Option #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arms Option #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arms Option #5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Legs__c</fullName>
        <label>Legs</label>
        <picklist>
            <picklistValues>
                <fullName>Legs Option #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legs Option #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legs Option #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legs Option #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legs Option #5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Normal__c</fullName>
        <label>Normal</label>
        <picklist>
            <picklistValues>
                <fullName>Normal Option #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Option #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Option #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Option #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal Option #5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Patient_Position__c</fullName>
        <label>Patient Position</label>
        <picklist>
            <picklistValues>
                <fullName>Position #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Position #5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Preference Cards</relationshipLabel>
        <relationshipName>Preference_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Room_Setup__c</fullName>
        <label>Room Setup</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>See_Preference_Card__c</fullName>
        <formula>HYPERLINK('/apex/PreferenceCard?oppId='+Procedure__c+'&amp;pcId='+ Id ,'Preference Card','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>See Preference Card</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Stirrups__c</fullName>
        <label>Stirrups</label>
        <picklist>
            <picklistValues>
                <fullName>Stirrops Option #1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stirrops Option #2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stirrops Option #3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stirrops Option #4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stirrops Option #5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Surgeon__c</fullName>
        <label>Surgeon</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Preference Card</label><nameField>
        <label>Preference Card Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Preference Cards</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Surgeon__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>